font awesome dependencies

--- a/package.json
+++ b/package.json
@@ -5,15 +5,20 @@
   "dependencies": {
     "@apollo/client": "^3.2.4",
     "@contentful/rich-text-react-renderer": "^14.1.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.11",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "bootstrap-icons": "^1.0.0",
     "dotenv": "^8.2.0",
     "graphql-playground-react": "^1.7.26",
     "graphql-tag": "^2.11.0",
     "node-sass": "^4.14.1",
     "nodemon": "^2.0.5",
     "react": "^16.14.0",
+    "react-bootstrap-icons": "^1.0.0",
     "react-dom": "^16.14.0",
     "react-helmet": "^6.1.0",
     "react-relay": "^10.0.1",
