--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@apollo/client": "^3.2.4",
     "@contentful/rich-text-react-renderer": "^14.1.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/free-regular-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.11",
     "@testing-library/jest-dom": "^4.2.4",
